--- a/src/app/components/employee/service-form/service-form.component.scss
+++ b/src/app/components/employee/service-form/service-form.component.scss
@@ -148,3 +148,42 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.img-container {
+  width: 50%;
+  max-height: 200px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  overflow: hidden;
+}
+
+.img {
+  width: 100%;
+  min-width: 100%;
+  height: 200px;
+  align-self: center;
+  border-radius: 10px;
+  display: block;
+  object-fit: cover;
+  user-select: none;
+  pointer-events: none;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+
+.delete-icon {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  color: red;
+  padding: 4px;
+  text-shadow: 2px 2px 20px black;
+}
