--- a/src/app/components/admin/add-employee/add-employee.component.scss
+++ b/src/app/components/admin/add-employee/add-employee.component.scss
@@ -40,7 +40,19 @@
   border-right: none;
 }
 
-input {
+.input-group-icon {
+  width: 100%;
+  margin: 10px 5px;
+  padding: 11px;
+  font-size: 16px;
+  border: 2px $color-dark-brown solid;
+  border-right: none;
+  border-radius: 5px 0px 0px 5px;
+}
+
+input,
+select,
+.phone-input {
   margin: 10px 5px;
   padding: 7px;
   font-size: 16px;
@@ -50,13 +62,61 @@ input {
   border-left: none;
 }
 
+.type-input {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+
+.phone-input {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+  // border: 2px $color-dark-brown solid;
+}
+
+select {
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
+    no-repeat;
+  background-position: calc(100% - 0.75rem) center !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+}
+
+select:focus {
+  border: 2px $color-dark-brown solid;
+  outline: none;
+  border-left: none;
+}
+
 .right-input .input-group-text {
   border: 2px $color-dark-brown solid;
   border-left: none;
   border-radius: 0 5px 5px 0;
 }
 
+.right-input .input-group-icon {
+  border: 2px $color-dark-brown solid;
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+}
+
 .right-input input {
+  border: 2px $color-dark-brown solid;
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.right-input .phone-input {
+  border: 2px $color-dark-brown solid;
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.right-input .type-input {
   border: 2px $color-dark-brown solid;
   border-right: none;
   border-radius: 5px 0 0 5px;
@@ -76,7 +136,7 @@ input {
   font-size: 14px;
   margin: -6px 20px 8px;
   padding-left: 15px;
-  font-weight: bold;
+  padding-right: 15px;
 }
 
 button {
@@ -96,4 +156,11 @@ button {
 }
 i {
   color: $color-dark-brown;
+}
+
+::ng-deep ngx-intl-tel-input .iti__tel-input {
+  border: none !important;
+  box-shadow: none !important;
+  outline: none !important;
+  padding: 0;
 }
