--- a/src/app/components/admin/room-form/room-form.component.scss
+++ b/src/app/components/admin/room-form/room-form.component.scss
@@ -100,7 +100,7 @@ input {
   font-size: 14px;
   margin: -6px 20px 8px;
   padding-left: 15px;
-  font-weight: bold;
+  padding-right: 15px;
 }
 
 .images-urls-inputs {
