--- a/src/app/components/shared/auth/sign-up/sign-up.component.html
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.html
@@ -12,64 +12,71 @@
 <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
   <h2>Sign Up</h2>
   <div>
-    <label>Name:</label>
+    <label>{{ "profile.name" | translate }}:</label>
     <input formControlName="name" type="text" />
-    <div *ngIf="submitted && f['name'].errors">
-      <small *ngIf="f['name'].errors['required']">Name is required.</small>
-      <small *ngIf="f['name'].errors['minlength']"
-        >Name must be at least 3 characters.</small
-      >
+    <div *ngIf="f['name'].invalid && f['name'].touched">
+      <small *ngIf="f['name'].errors?.['required']">{{
+        "shared.form.name-required" | translate
+      }}</small>
+      <small *ngIf="f['name'].errors?.['minlength']">{{
+        "shared.form.name-too-long" | translate
+      }}</small>
     </div>
   </div>
 
   <div>
-    <label>Email:</label>
+    <label> {{ "profile.email" | translate }} :</label>
     <input formControlName="email" type="email" />
-    <div *ngIf="submitted && f['email'].errors">
-      <small *ngIf="f['email'].errors['required']">Email is required.</small>
-      <small *ngIf="f['email'].errors['email']">Enter a valid email.</small>
+    <div *ngIf="f['email'].invalid && f['email'].touched">
+      <small *ngIf="f['email'].errors?.['required']">
+        {{ "profile.email-required" | translate }}
+      </small>
+      <small *ngIf="f['email'].errors?.['pattern']">
+        {{ "profile.email-invalid-pattern" | translate }}
+      </small>
     </div>
   </div>
 
   <div>
-    <label>Password:</label>
+    <label>{{ "profile.new-password" | translate }}:</label>
     <input formControlName="password" type="password" />
-    <div *ngIf="submitted && f['password'].errors">
-      <small *ngIf="f['password'].errors['required']"
-        >Password is required.</small
-      >
-      <small *ngIf="f['password'].errors['minlength']"
-        >Minimum 6 characters.</small
-      >
-      <small *ngIf="f['password'].errors['pattern']"
-        >Must contain uppercase letter and number.</small
-      >
+    <div *ngIf="f['password'].invalid && f['password'].touched">
+      <small *ngIf="f['password'].errors?.['required']">
+        {{ "profile.password-required" | translate }}
+      </small>
+      <small *ngIf="f['password'].errors?.['pattern']">
+        {{ "profile.password-pattern" | translate }}
+      </small>
     </div>
   </div>
 
   <div>
-    <label>Confirm Password:</label>
+    <label>{{ "profile.confirm-password" | translate }}:</label>
     <input formControlName="confirmPassword" type="password" />
     <div
-      *ngIf="submitted && (f['confirmPassword'].errors || signUpForm.errors?.['mismatch'])"
+      *ngIf="(f['confirmPassword'].touched || submitted) &&
+         (f['confirmPassword'].errors || signUpForm.errors?.['mismatch'])"
     >
-      <small *ngIf="f['confirmPassword'].errors?.['required']"
-        >Confirmation is required.</small
-      >
+      <small *ngIf="f['confirmPassword'].errors?.['required']">
+        {{ "profile.confirmation-required" | translate }}.
+      </small>
       <small
         *ngIf="!f['confirmPassword'].errors && signUpForm.errors?.['mismatch']"
-        >Passwords do not match.</small
       >
+        {{ "profile.password-match" | translate }}
+      </small>
     </div>
   </div>
 
   <div class="d-flex justify-content-center">
-    <button class="btn-primary" type="submit">Sign Up</button>
+    <button class="btn-primary" type="submit">
+      {{ "header.auth.signup" | translate }}
+    </button>
   </div>
   <p style="text-align: center; margin-top: 1rem">
-    Already have an account?
+    {{ "already-have-an-account" | translate }}
     <a routerLink="/login" style="font-weight: bold; display: inline-block"
-      >Login!</a
+      >{{ "header.auth.login" | translate }}!</a
     >
   </p>
 </form>
