--- a/src/app/components/shared/auth/sign-up/sign-up.component.scss
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.scss
@@ -49,8 +49,10 @@ input {
 }
 
 small {
-  color: red;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
+  color: $color-red;
+  width: 100%;
+  padding-left: 15px;
 }
 
 a {
