--- a/src/app/components/shared/auth/profile/profile.component.html
+++ b/src/app/components/shared/auth/profile/profile.component.html
@@ -1,24 +1,33 @@
 <div class="page">
-  <div class="d-flex justify-content-between align-items-center">
+  <div class="d-flex justify-content-between align-items-center m-4 mb-5 pb-3">
     @if(!isEditing){
-    <h1 class="m-4 mb-4">{{ "profile.title" | translate }}</h1>
+    <h1>{{ "profile.title" | translate }}</h1>
     } @else {
-    <h1 class="m-4 mb-4">{{ "profile.edit-profile" | translate }}</h1>
+    <h1>{{ "profile.edit-profile" | translate }}</h1>
     }
   </div>
   <div *ngIf="!isEditing" class="profile-details">
-    <div class="container p-4 ps-5 pe-5 mt-4">
+    <div class="container p-4 ps-5 pe-5">
       <div class="pfp-container">
         <div class="pfp-parent">
           <img
             class="pfp"
             [src]="
-              user?.pfp
-                ? user?.pfp
+              imageUrl
+                ? imageUrl
                 : '../../../../../assets/images/profile-default-image.png'
             "
           />
-          <i class="bi bi-camera-fill"></i>
+          <input
+            id="fileInput"
+            type="file"
+            accept="image/png, image/jpeg, image/gif"
+            (change)="onFileSelected($event)"
+            hidden
+          />
+          <label for="fileInput">
+            <i class="bi bi-camera-fill"></i>
+          </label>
         </div>
         <i
           class="bi bi-pencil-square h3 ms-4 me-4 profile-header-btn"
@@ -65,7 +74,7 @@
     </div>
   </div>
   <div *ngIf="isEditing" class="center-wrapper edit-profile">
-    <div class="container p-4 ps-5 pe-5 mt-4">
+    <div class="container p-4 ps-5 pe-5">
       <div class="pfp-container">
         <div class="pfp-parent">
           <img
@@ -76,7 +85,17 @@
                 : '../../../../../assets/images/profile-default-image.png'
             "
           />
-          <i class="bi bi-camera-fill"></i>
+
+          <input
+            id="fileInput"
+            type="file"
+            accept="image/png, image/jpeg, image/gif"
+            (change)="onFileSelected($event)"
+            hidden
+          />
+          <label for="fileInput">
+            <i class="bi bi-camera-fill"></i>
+          </label>
         </div>
 
         <i
@@ -100,21 +119,31 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Name"
                 aria-label="Name"
                 [placeholder]="'profile.name' | translate"
                 formControlName="name"
+                pattern="^[\u0600-\u06FFa-zA-Z'\s]+$"
+                maxlength="20"
+                minlength="3"
                 required
               />
             </div>
             <div
               class="error"
               *ngIf="
-                profileForm.get('name')?.invalid &&
-                profileForm.get('name')?.touched
+                profileForm.get('name')?.touched ||
+                profileForm.get('name')?.dirty
               "
             >
-              {{ "profile.name-required" | translate }}
+              <div *ngIf="profileForm.get('name')?.errors?.['required']">
+                {{ "shared.form.title-required" | translate }}
+              </div>
+              <div *ngIf="profileForm.get('name')?.errors?.['maxlength']">
+                {{ "shared.form.title-too-long" | translate }}
+              </div>
+              <div *ngIf="profileForm.get('name')?.errors?.['pattern']">
+                {{ "shared.form.title-invalid" | translate }}
+              </div>
             </div>
           </div>
         </div>
@@ -133,22 +162,19 @@
               <input
                 type="email"
                 class="form-control"
-                placeholder="Email"
                 aria-label="Email"
-                placeholder="example@gmail.com"
+                [placeholder]="'profile.email' | translate"
                 formControlName="email"
                 required
-                email
               />
             </div>
-            <div
-              class="error"
-              *ngIf="
-                profileForm.get('email')?.invalid &&
-                profileForm.get('email')?.touched
-              "
-            >
-              {{ "profile.email-required" | translate }}
+            <div class="error" *ngIf="profileForm.get('email')?.touched">
+              <div *ngIf="profileForm.get('email')?.errors?.['required']">
+                {{ "profile.email-required" | translate }}
+              </div>
+              <div *ngIf="profileForm.get('email')?.errors?.['pattern']">
+                {{ "profile.email-invalid-pattern" | translate }}
+              </div>
             </div>
           </div>
         </div>
@@ -160,20 +186,29 @@
               [ngClass]="{ 'right-input': lang == 'ar' }"
             >
               <div class="align-self-center">
-                <span class="input-group-text align-self-center bg-white">
+                <span
+                  class="input-group-text input-group-icon align-self-center bg-white"
+                >
                   <i class="fa-solid fa-phone"></i>
                 </span>
               </div>
-              <input
-                appPhoneFormat
-                type="text"
-                class="form-control"
-                placeholder="e.g. 079-123 4567"
-                aria-label="Phone"
-                [placeholder]="'profile.phone' | translate"
+              <ngx-intl-tel-input
+                class="phone-input"
+                [enableAutoCountrySelect]="true"
+                [enablePlaceholder]="true"
+                [searchCountryFlag]="true"
+                [searchCountryField]="[
+                  SearchCountryField.Iso2,
+                  SearchCountryField.Name
+                ]"
+                [selectFirstCountry]="true"
+                [preferredCountries]="preferredCountries"
+                [phoneValidation]="true"
+                [separateDialCode]="true"
                 formControlName="phone"
-                required
-              />
+                [maxLength]="10"
+                name="phone"
+              ></ngx-intl-tel-input>
             </div>
             <div
               class="error"
