--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -90,8 +90,15 @@ a {
   display: flex;
   align-items: center;
   gap: 5px;
+
+  i {
+    vertical-align: middle;
+    position: relative;
+    top: 1px;
+  }
 }
-.logo{
+
+.logo {
   width: 150px;
 }
 
@@ -105,4 +112,5 @@ a {
 .pfp {
   width: 30px;
   height: 30px;
+  border-radius: 50px;
 }
